# MathViz-E

./: .gitignore  CODE_OF_CONDUCT.md  CONTRIBUTING.md  Dockerfile  README.md  pyproject.toml  requirements.txt  run.sh  run_multi_turn_tests.sh  run_single_turn_tests.sh
.github/workflows/: blackducksca-workflow.yml
src/: desmos_calc.html  env.dist  main.py  main_tests.py  prompts.py  routes.py  utils.py
src/agents/: desmos_agent.py  math_viz_agent.py  wolfram_agent.py
src/static/: desmos.css  desmos.js  desmosUI.js
test/multi_turn/: graph_circles.csv  graph_lines.csv  graph_polynomials.csv  inverse_functions.csv  linear_and_nonlinear_functions.csv  linear_quadratic_systems.csv  transformations_of_functions.csv
test/single_turn/: graph_circle_tangents.csv  graph_circles.csv  graph_circles_2.csv  graph_lines.csv  graph_lines_2.csv  graph_multi_step_labeling.csv  graph_parabola_tangents.csv  graph_polynomials.csv  graph_quad_eqns.csv  intercepts.csv  intersections_of_lines.csv  inverse_functions.csv  linear_and_nonlinear_functions.csv  linear_equation_systems.csv  linear_inequalities.csv  linear_inequalities_2.csv  local_optima.csv  proportional_relationships.csv  rigid_transformations.csv  transform_shapes.csv  transformations_of_functions.csv  transformations_of_functions_2.csv
